--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GoGrocer</string>
+    <string name="app_name">J6</string>
     <string name="name">GoGrocer</string>
     <string name="currency"> ر.س</string>
     <string name="title_activity_main">Actividad principal</string>
