--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
 
-    <string name="app_name">GoGrocer</string>
+    <string name="app_name">J6</string>
     <string name="nav_terms">الشروط والخصوصية</string>
     <string name="nav_user">"المستعمل "</string>
     <string name="nav_home">تسوق الآن </string>
