--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -38,7 +38,7 @@
     <string name="btn_login">تسجيل الدخول</string>
     <string name="btn_send">إرسال</string>
     <string name="btn_continue">تسجيل الدخول</string>
-    <string name="btn_Register">إنشاء حساب</string>
+    <string name="btn_Register">سجل</string>
 <string name="continue_bt">استمرار</string>
     <string name="tv_login_note">قبل الاستمرار في التطبيق ، يجب عليك التحقق من رقم هاتفك المحمول. سيرسل نظامنا رمز OTP في رقم الهاتف المحمول المسجل</string>
 
