--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="nav_share" translatable="false">Share with Friends</string>
     <string name="nav_logout" translatable="false">Logout</string>
     <string name="btn_continue" translatable="false">Sign In</string>
-    <string name="btn_Register" translatable="false">Register</string>
+    <string name="btn_Register" translatable="false">Sign Up</string>
     <string name="rewards_points" translatable="false">Rewards Points</string>
     <string name="rech_wallet" translatable="false">Recharge Wallet</string>
     <string name="continue_bt" translatable="false">Continue</string>
