--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="apply" translatable="false">Apply</string>
     <!-- string.xml -->
     <string name="nav_home" translatable="false">Shop Now</string>
+    <string name="nav_stores" translatable="false">Stores</string>
     <string name="nav_chat" translatable="false">Chat With Us</string>
     <string name="nav_user" translatable="false">User</string>
     <string name="nav_order" translatable="false">My Orders</string>
