--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>
 
 
-
     <string name="facebook_app_id" translatable="false">964749680607230</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb964749680607230</string>
 
@@ -243,4 +242,6 @@
     <string name="socity">Society:\u0020</string>
 
     <string name="status_stop">Powered By <font color="#f7941e">GoGrocer</font></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
