--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="uname">اسم</string>
+    <string name="uphone">هاتف</string>
+    <string name="urefrel">كود الإحالة</string>
+
+
+    <string name="email">البريد الإلكتروني</string>
+    <string name="password">كلمه السر</string>
+    <string name="sign_up"><u>سجل</u></string>
+
+    <string name="create">انشئ حساب؟</string>
+    <string name="guest">زائر</string>
+
 
     <string name="app_name">J6</string>
     <string name="nav_terms">الشروط والخصوصية</string>
     <string name="nav_user">"المستعمل "</string>
+    <string name="or_sign">أو تسجيل الدخول كـ</string>
+
     <string name="nav_home">تسوق الآن </string>
     <string name="nav_profile">الملف الشخصي\n</string>
     <string name="nav_order">طلباتي\n</string>
