--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,11 +46,11 @@
     <string name="retry" translatable="false">Retry Order</string>
     <string name="nav_review" translatable="false">Review Us</string>
     <string name="nav_contact" translatable="false">Contact Us</string>
-    <string name="nav_share" translatable="false">Share with Friends</string>
+    <string name="nav_share" translatable="false">Share app</string>
     <string name="nav_logout" translatable="false">Logout</string>
     <string name="btn_continue" translatable="false"><b>Sign In</b></string>
     <string name="btn_Register" translatable="false">Sign Up</string>
-    <string name="rewards_points" translatable="false">Rewards Points</string>
+    <string name="rewards_points" translatable="false">J6 Points</string>
     <string name="rech_wallet" translatable="false">Recharge Wallet</string>
     <string name="continue_bt" translatable="false">Continue</string>
     <string name="wall_am" translatable="false">My Wallet Amount</string>
@@ -80,6 +80,8 @@
     <string name="tv_reg_address">Address(Required)</string>
     <string name="et_reg_address">Complete Address</string>
     <string name="use" translatable="false">Use</string>
+    <string name="rate" translatable="false">Rate</string>
+    <string name="feedback" translatable="false">Feedback</string>
     <string name="store" translatable="false">Store Pick Up</string>
     <string name="confirm_order" translatable="false">Confirm</string>
     <string name="pickup" translatable="false">PickUp / COD</string>
@@ -157,7 +159,7 @@
     <string name="thanks" translatable="false">Thanks Order</string>
     <string name="paytm" translatable="false">Paytm</string>
     <!-- Forgot password -->
-    <string name="forgot" ><i>Forgot Password ? </i></string>
+    <string name="forgot"><i>Forgot Password ? </i></string>
 
     <!-- Code message and concat  string -->
     <string name="my_order" translatable="false">My Order</string>
