--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="top_selling">Top Selling</string>
     <string name="stores">Store</string>
     <string name="caty">Categories</string>
     <string name="favourt">Favourite</string>
