--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -30,6 +30,8 @@
     <string name="nav_home">تسوق الآن </string>
     <string name="nav_profile">الملف الشخصي\n</string>
     <string name="nav_order">طلباتي\n</string>
+    <string name="nav_order_note">مذكرة الطلب(اختياري):\n</string>
+    <string name="nav_note">أدخل أي ملاحظة إضافية (اختياري)\n</string>
     <string name="tv_toolbar_name">المكافآت\n</string>
     <string name="nav_chat">دردش معنا</string>
     <string name="nav_support">الدعم</string>
