--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -27,6 +27,7 @@
     <string name="nav_user">"المستعمل "</string>
     <string name="or_sign">أو تسجيل الدخول كـ</string>
 
+    <string name="rating">التقييم والمراجعات</string>
     <string name="nav_home">تسوق الآن </string>
     <string name="nav_profile">الملف الشخصي\n</string>
     <string name="nav_order">طلباتي\n</string>
