--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
 
+    <string name="expire">Expired</string>
+
+    <string name="Deal">Deals</string>
+
     <string name="top_selling">Top Selling</string>
     <string name="stores">Store</string>
     <string name="caty">Categories</string>
@@ -35,9 +39,9 @@
     <string name="action_settings" translatable="false">Settings</string>
 
     <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
-    <string name="offer" translatable="false">Offer</string>
-    <string name="start_time" translatable="false">Start Time :</string>
-    <string name="end_time" translatable="false">End Time :</string>
+    <string name="offer" translatable="false">Offer :</string>
+    <string name="start_time" translatable="false">Start Time : </string>
+    <string name="end_time" translatable="false">End Time : </string>
     <string name="wallet" translatable="false">Wallet Used</string>
     <string name="coupon_used" translatable="false">Coupon Used</string>
     <string name="apply" translatable="false">Apply</string>
