--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -36,10 +36,12 @@
 
     <string name="action_settings">Configuraciones</string>
     <string name="expire">Expired</string>
-
+    <string name="no_product">No Products Available</string>
     <string name="nav_terms">Términos y Privacidad</string>
     <string name="start_time">Start Time : </string>
     <string name="end_time">End Time : </string>
+    <string name="no_fav">No Favourite Available</string>
+
 
     <!-- string.xml -->
     <string name="nav_home">Comprar Ahora</string>
