--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="sign_up"><u>Sign Up</u></string>
+    <string name="sign_upto">Please Sign Up to continue</string>
 
     <string name="guest">Guest</string>
     <string name="or_sign">Or Sign In as a</string>
