--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -24,6 +24,8 @@
     <string name="password">كلمه السر</string>
     <string name="sign_up"><u>سجل</u></string>
     <string name="sign_upto">يرجى الاشتراك للمتابعة</string>
+    <string name="btn_continueto" ><b>مرحبا بكم في محلات j6</b></string>
+    <string name="btn_continueto1" ><b>الرجاء تسجيل الدخول للمتابعة</b></string>
 
     <string name="create">انشئ حساب؟</string>
     <string name="guest">زائر</string>
