--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,6 +18,8 @@
     <string name="guest">Guest</string>
     <string name="or_sign">Or Sign In as a</string>
     <string name="sign_upto"><u>Please Sign Up to continue</u></string>
+    <string name="btn_continueto" ><b>Welcome to j6 Stores</b></string>
+    <string name="btn_continueto1" ><b>Please login to continus</b></string>
     <string name="create">Create an Account?</string>
     <string name="rate" translatable="false">Rate</string>
     <string name="feedback" translatable="false">Feedback</string>
