--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -244,6 +244,7 @@
     <string name="Discount">خصم</string>
     <string name="search">البحث</string>
     <string name="searchh">إبحث</string>
+    <string name="Remove">إزالة</string>
     <string name="search_text">بحث المنتجات والعلامات التجارية وأكثر من ذلك</string>
     <string name="enter_keyword">يرجى إدخال الكلمة</string>
     <string name="delete">حذف</string>
