--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -9,6 +9,8 @@
 
     <string name="top_selling">الأكثر مبيعا</string>
 
+
+    <string name="mblnumber">أدخل رقم هاتفك المحمول</string>
     <string name="stores">متجر</string>
     <string name="caty">التصنيفات</string>
     <string name="favourt">مفضل</string>
