--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,6 +10,7 @@
     <string name="Cart">Cart</string>
     <string name="Me">Account</string>
 
+    <string name="mblnumber">Enter your mobile number</string>
     <string name="app_name">J6</string>
     <string name="name">GoGrocer</string>
     <string name="currency"> ر.س</string>
