--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="Deal">Deals</string>
 
+    <string name="mblnumber">Enter your mobile number</string>
     <string name="top_selling">Top Selling</string>
     <string name="stores">Stores</string>
     <string name="caty">Categories</string>
