--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,7 +4,7 @@
     <string name="top_selling">Top Selling</string>
     <string name="Deal">Deals</string>
 
-    <string name="stores">Store</string>
+    <string name="stores">Stores</string>
     <string name="caty">Categories</string>
     <string name="favourt">Favourite</string>
     <string name="Cart">Cart</string>
