--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,6 +9,7 @@
     <string name="favourt">Favourite</string>
     <string name="Cart">Cart</string>
     <string name="Me">Account</string>
+    <string name="popular">Popular products</string>
 
     <string name="mblnumber">Enter your mobile number</string>
     <string name="app_name">J6</string>
