--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
 
 
+    <string name="fav_store">Favourite\n Stores</string>
+    <string name="fav_cat">Favourite\nCategories</string>
+    <string name="fav_prod">Favourite\n Products</string>
+
+
     <string name="wallet_ammount">My Wallet Ammount : </string>
     <string name="j6_point">J6 Points : </string>
 
