--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="wallet_ammount">My Wallet Ammount : </string>
     <string name="j6_point">J6 Points : </string>
 
+    <string name="VerificationCode">Verification Code</string>
+    <string name="VerificationCodeDesc">Please enter verification code sent to</string>
 
     <string name="term_and_conditions">Terms and \nConditions</string>
     <string name="privacy">Privacy \nPolicy</string>
@@ -49,7 +51,7 @@
     <string name="password">Password</string>
     <string name="sign_up"><u>Sign Up</u></string>
     <string name="sign_upto">Please Sign Up to continue</string>
-    <string name="popular"><font font="janna">Popular products</font></string>
+    <string name="popular">Popular products</string>
 
     <string name="guest">Guest</string>
     <string name="or_sign">Or Sign In as a</string>
@@ -304,4 +306,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="followed">Followed</string>
+
+
+
+
+    <string name="Coupons">Coupons</string>
+    <string name="VIP">VIP</string>
+    <string name="FreeShipping">Free Shiping</string>
 </resources>
