--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -250,4 +250,7 @@
     <string name="Coupons">Coupons</string>
     <string name="VIP">VIP</string>
     <string name="FreeShipping">Free Shiping</string>
+
+
+    <string name="agree">Agree our Terms and Conditions</string>
 </resources>
