--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,7 +51,7 @@
     <string name="uphone">Phone</string>
     <string name="urefrel">Referal Code</string>
 
-    <string name="email">Email</string>
+    <string name="email">Enter Your email and Password</string>
 
 
     <string name="action_settings">Configuraciones</string>
