--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="nav_share" translatable="false">Share app</string>
     <string name="nav_logout" translatable="false">Logout</string>
     <string name="btn_continue" translatable="false"><b>Login</b></string>
-    <string name="btn_continueto" ><b>Welcome To \n    j6 Stores</b></string>
+    <string name="btn_continueto" ><b>Welcome To\nJ6 Stores</b></string>
     <string name="btn_continueto1" >Please login to continue</string>
     <string name="btn_Register" translatable="false">Sign Up</string>
     <string name="rewards_points" translatable="false">J6 Points</string>
