--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
 
     <string name="fav_store">Favourite\n Stores</string>
     <string name="fav_cat">Favourite\nCategories</string>
